welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:3: error: type mismatch;
 found   : Unit
 required: Int
	x=setX(getX);
              ^