welcome.lessons.welcome.loopfor.LoopStairs.scala.code
var x=0
while (x<14) {
	x=setX(getX);
	if (!estFaceMur()) {
		avance();
	} else {
		gauche();
		avance();
		droite();
	}
}

